# cs-alert

./: README.md  main.py  pyproject.toml
app/data/: playbooks.json  sample_attacks.json
app/models/: alert.py  playbook.py
